# Raspberry-pi-pico-Pill-dispenser

./: .gitignore  CMakeLists.txt  Log-Readme.md  debounce.c  debounce.h  eeprom.h  lora.h  main.c  readlogs.c  readme.md  stepper.pio  testmain.c
lib/: eeprom.h  led.h  logHandling.h  lora.h  magnusFuncs.h  ring_buffer.h  statemachine.h  stepper.h
src/: debounce.c  eeprom.c  led.c  logHandling.c  lora.c  magnusFuncs.c  ring_buffer.c  statemachine.c  stepper.c
